Fix timeline duration blob height when wrapped

--- a/public/_style/timeline.css
+++ b/public/_style/timeline.css
@@ -43,7 +43,7 @@
     padding-block: 2em;
 
     &::before {
-      height: 72px;
+      height: calc(100% - 0.5lh);
     }
   }
 }
